[package]
name = "torii"
version = "0.1.0"
edition = "2024"

[lib]
name = "torii"
path = "src/lib.rs"

[[bin]]
name = "torii"
path = "src/main.rs"

[[bin]]
name = "docker-torii"
path = "src/docker_plugin.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
ml-kem = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
argon2 = "0.5"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
dialoguer = "0.11"
ctrlc = "3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
